# team-recruit-mcp

./: .gitignore  AGENTS.md  INTEGRATION_TEST_GUIDE.md  LICENSE  LOCAL_TEST_REPORT.md  PLAN.md  README.md  TECHSPEC.md  TODO.md  USER_GUIDE.md  package.json  slack_api_info.md  test_mcp.py  test_simple.sh
docs/: CLIENT_INTEGRATION.md  SERVER_SPEC.md  TECHSPEC.md
mcp-team-recruit/: .env.example  .gitignore  Dockerfile  FINAL_TEST_REPORT.md  INSTALL.md  README.md  deploy.sh  mcp_client.py  mcp_stdio.py  pyproject.toml  requirements.txt  server.py  server_http.py  server_stdio.py  setup.py  test_accept_header_relax.py  test_apply.py  test_category_field.py  test_full_integration.py  test_http_client.py  test_mcp_full.py  test_military_status.py  test_slack.py  test_slack_integration.py  test_updated_server.py  test_user_experience.py
mcp-team-recruit/docs/: CLIENT_GUIDE.md  POSTING.md
src/: index.js
