[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-team-recruit"
version = "1.0.0"
description = "MAICON 2025 팀 빌딩 MCP 서버 (FastMCP HTTP)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.1.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "email-validator>=2.1.0",
]
